# PA3Py

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: api.rst  conf.py  index.rst  requirements.txt
docs/_build/html/.doctrees/: api.doctree  index.doctree
docs/notebooks/: 00_Fisica_Implementada.ipynb  00_Implemented_Physics.ipynb  01_Getting_Started.ipynb  01_Primeros_Pasos.ipynb  01_Quickstart_Waterworlds.ipynb  02_Advanced_Chemistry.ipynb  02_Fisica_del_Disco_y_Snowline.ipynb  02_Quimica_Avanzada.ipynb  03_Poblaciones_Sinteticas_e_IO.ipynb  03_Quimica_Compleja_y_Zonas.ipynb  03_Synthetic_Populations_and_IO.ipynb  04_Poblaciones_Sinteticas.ipynb  poblacion_sintetica_100.h5  synthetic_population_100.h5
scratch/: generate_notebook_04.py  generate_notebooks.py  generate_notebooks_release.py
src/pa3py/: __init__.py  composition.py  constants.py  core.py  data.py  pebble_accretion.py  plotting.py  snowline.py
tests/: test_composition.py  test_constants.py  test_io.py  test_pebble_accretion.py  test_plotting.py  test_snowline.py
tests/test_data/: .gitignore
tests/test_data/run_smooth_a0.001_v10/: data0000.hdf5  data0001.hdf5  data0002.hdf5  data0003.hdf5  data0004.hdf5  data0005.hdf5  data0006.hdf5  data0007.hdf5  data0008.hdf5  data0009.hdf5  data0010.hdf5  data0011.hdf5  data0012.hdf5  data0013.hdf5  data0014.hdf5  data0015.hdf5  data0016.hdf5  data0017.hdf5  data0018.hdf5  data0019.hdf5  data0020.hdf5  data0021.hdf5  data0022.hdf5  data0023.hdf5  data0024.hdf5  data0025.hdf5  data0026.hdf5  data0027.hdf5  data0028.hdf5  data0029.hdf5  data0030.hdf5  data0031.hdf5  data0032.hdf5  data0033.hdf5  data0034.hdf5  data0035.hdf5  data0036.hdf5  data0037.hdf5  data0038.hdf5  data0039.hdf5  (+61 more)
