[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pa3py"
version = "1.0.0"
authors = [
  { name="Maximiliano Valderrama", email="mvalderrav@uc.cl" },
]
description = "Post-processing tool for pebble accretion onto planetary embryos from TripodPy hydrodynamic simulations."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT License" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "h5py>=3.0",
    "matplotlib>=3.4",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "jupyter>=1.0"]

[project.urls]
"Homepage"   = "https://github.com/mmmaxii/PA3Py"
"Bug Tracker" = "https://github.com/mmmaxii/PA3Py/issues"
"Documentation" = "https://pa3py.readthedocs.io"

[tool.pytest.ini_options]
testpaths = ["tests"]
